# ZetaInSpect

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/zetainspect/: __init__.py  background.py  plotting.py  scales.py  spectrum.py  utils.py
tutorials/: example.ipynb  test.py
