[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zetainspect"
version = "0.1.0"
description = "Fast piecewise-η inflationary background, scale mappings, and Mukhanov–Sasaki-based scalar power spectrum utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Athul K. Soman", email = "akuruvai@sissa.it" },
  { name = "Swagat S. Mishra" },
  { name = "Sanket Dave" },
  { name = "Parth Bhargava" }
]
keywords = ["cosmology", "inflation", "power spectrum", "Mukhanov-Sasaki", "early universe"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/athul104/ZetaInSpect"
Issues = "https://github.com/athul104/ZetaInSpect/issues"

[tool.hatch.build]
include = [
  "src/zetainspect/**/*.py",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "CITATION.cff",
]
exclude = [
  "tests",
  "examples",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zetainspect"]

[tool.hatch.build.targets.sdist]
include = [
  "src/zetainspect",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "CITATION.cff",
  "examples",
]